apps/adguard/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "AdGuard"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "adguard-home"
    gethomepage.dev/href: "https://adguard.cyphers.app"
    gethomepage.dev/description: "DNS Ad Blocking"
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`adguard.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: adguard-adguard-home
          namespace: adguard
          port: 3000
  tls:
    secretName: production-cyphers-app-tls
